2009-07-28  Thomas M Hinkle  <tom@minime>

	* src/lib/reccard.py (RecCardDisplay.multiplication_change_cb):
	Implement multiplication again.

2009-07-15  Thomas M Hinkle  <tom@minime>

	* src/lib/ImageExtras.py (get_pixbuf_from_jpg): Create one unique
	tempfile per session, rather than hardcoding name
	gourmet_tempfile, which breaks Gourmet in multiuser
	environments (bug #271712)

	* windows/gtkrc: Remove custom theme to try to work around bug
	with vertical notebooks (see bug #2768204)

	* src/lib/plugin_loader.py (MasterLoader.load_plugin_directories):
	Fix hardcoded / in glob path. Fix from Julianne Sharer.

2009-07-14  Thomas M Hinkle  <tom@minime>

	* src/lib/importers/interactive_importer.py (InteractiveImporter.commit_changes):
	Fix syntax error in last commit (parens).
	* src/lib/defaults/defaults_de.py: Unicodify strings (u'')
	* src/lib/convert.py (float_to_metric): Use integer format
	code (%i) instead of string format-code which allows decimals to
	slip through formatting algorithm when they shouldn't (and
	non-localized decimals at that)
	(float_string): Allow people with commas as decimal separators to
	correctly parse recipes from period-separated locales where
	unambiguous (e.g. 23.00 and not 23.000).

2009-06-27  Thomas Hinkle  <tom@grenville>

	* src/lib/importers/interactive_importer.py (InteractiveImporter.commit_changes.mark_sorter):
	Handle markup in title of recipe in imageBrowser dialog window.

2009-06-18  Thomas Hinkle  <tom@grenville>

	* src/lib/* Get rid of old debugging print statements throughout library.

	* src/lib/importers/interactive_importer.py (InteractiveImporter.setup_window):
	Set parent to threadManagerGui dialog.

	* src/lib/version.py: version->0.14.10

	* src/lib/threadManager.py (ThreadManagerGui.__init__): Make
	thread manager dialog transient for main Gourmet window if not
	told who its transient for.

2009-06-17  Thomas Hinkle  <tom@grenville>
